# crypto-agent

./: .dockerignore  .env.template  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  README.md  agent_graph.py  config.py  dashboard.py  database.py  debug_price.py  docker-compose.yml  logger.py  main.py  main_scheduler.py  market_data.py  pricing.json  prompt.md  prompts.py  pyproject.toml  requirements.txt  test_config.py  trading_data.db  verify_config.py  verify_fix.py
.claude/: settings.json  settings.local.json
.gemini/: settings.json
agent/: agent_graph.py  agent_models.py  agent_tools.py  chat_graph.py  multi_agent_graph.py
backend/: __init__.py  config.py  config_store.py  database.py  database_balance.py  database_chat.py  database_cleanup.py  database_dca.py  database_memory.py  database_mock.py  database_orders.py  database_position.py  database_pricing.py  database_schema.py  database_summary.py  database_trade.py  main_scheduler.py  storage_paths.py
doc/: FAQ.md
docs/: CONFIG_GUIDE.md  COST_ESTIMATION.md  DEPLOYMENT_GUIDE.md  FAQ.md  INSTALL.md  RELEASE_NOTES_v1.0.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
prompts/: real.txt  strategy.txt
routes/: auth.py  chat.py  config.py  main.py  stats.py  utils.py
templates/: admin.html  base.html  chat.html  dashboard.html  history.html  stats_public.html
tests/: test_api_access.py  test_balance_and_orders.py  test_chat_sessions.py  test_config_store.py  test_daily_summary.py  test_dca_snapshots.py  test_llm_utils.py  test_mock_trading.py  test_order_fills.py  (+3 more)
(+98 files in other folders)
